@@ -19,6 +19,8 @@ Drupal 7.0, xxxx-xx-xx (development version)
       slimmed down install profile for developers.
     * Image toolkits are added by modules instead of being copied to
       the includes directory.
+- News aggregator:
+    * Added OPML import functionality for RSS feeds.
 - Search:
     * Added support for language-aware searches.
 - Testing:
